--- a/theForgottenDoor.html
+++ b/theForgottenDoor.html
@@ -68,36 +68,67 @@
       <div class="col">
         <img src="photos/Screenshot 2025-01-29 201220.jpg" class="img-fluid" alt="">
       </div>
-    </div><hr>
+    </div><hr><br><br>
 
-    <!--tabs under nav-->
-    <ul class="nav nav-tabs" data-bs-theme="dark" id="myTab" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button"
-          role="tab" aria-controls="home-tab-pane" aria-selected="true">Mission</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button"
-          role="tab" aria-controls="profile-tab-pane" aria-selected="false">asdf</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button"
-          role="tab" aria-controls="contact-tab-pane" aria-selected="false">Contact</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="game-tab" data-bs-toggle="tab" data-bs-target="#game-tab-pane" type="button"
-          role="tab" aria-controls="game-tab-pane" aria-selected="false"></button>
-      </li>
-    </ul>
-    <br>
-    <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur quo, optio ex deleniti consequatur cupiditate nemo natus, harum pariatur corrupti ipsam obcaecati sequi numquam nam molestias, quidem beatae fugiat dolorum. Iure, magnam. Consectetur iste eveniet iure veritatis ex, aperiam accusantium optio laborum voluptates maiores, necessitatibus eligendi odio laudantium facilis assumenda cumque magnam eum repudiandae quidem aut, autem vitae dignissimos non. Dicta temporibus iste eos possimus. Atque enim quo eius quas repellat reiciendis unde totam voluptatibus repudiandae illum vel aliquid culpa fugit assumenda rerum rem, harum facilis corporis? Fugiat quae harum quo consequatur vel unde eveniet aut debitis maxime non. Dolorum!</div>
-      <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quis aperiam molestiae! Maxime, odio mollitia harum provident illum at. Animi vero blanditiis doloremque perferendis et fuga quam quae, veritatis, earum distinctio atque neque dolorem ipsam iste inventore praesentium quod! Aperiam, quasi? Molestias in iusto voluptas! Animi numquam quasi ipsam. Provident consequatur illum facere aperiam placeat. Accusamus alias velit explicabo sed amet quo nostrum magni inventore architecto exercitationem doloribus odit, et neque voluptatum esse vero reiciendis autem unde. Magnam cum molestiae tenetur sunt accusamus esse dolor commodi deleniti magni, numquam officiis. Eaque necessitatibus repudiandae facilis magnam laboriosam nisi, doloremque ipsam libero?
-      </div>
-      <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa sequi, earum iure praesentium animi voluptate temporibus et accusantium explicabo voluptatibus quibusdam non error numquam, quaerat soluta vel perferendis sapiente ullam saepe quia! Minima iste illum tempora quis possimus ullam. Voluptas rem sapiente animi culpa? Veniam iusto assumenda expedita. At dolor, ad in officia fuga numquam ipsam asperiores soluta aperiam, quisquam, eveniet corrupti enim hic modi dolores nihil explicabo dolore! Magni odio eaque amet inventore officia consequuntur sint veniam voluptates iure ratione illum non laboriosam necessitatibus, culpa facere cupiditate dolore qui nemo ex molestiae perspiciatis voluptatum? Veniam amet neque ea cumque.</div>
-      <div class="tab-pane fade" id="game-tab-pane" role="tabpanel" aria-labelledby="game-tab" tabindex="0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti dolorem animi eos, distinctio ipsum expedita corporis odit rem ipsam ipsa alias aut! Quisquam fuga nihil nostrum praesentium, soluta eligendi, eaque cupiditate vel aliquid quas inventore ipsa cum quo. Voluptas harum quasi architecto alias itaque eligendi modi labore sed aspernatur rerum quod atque voluptatem unde deleniti pariatur vitae nobis, nostrum quia. Voluptates rem enim sapiente adipisci commodi cumque, accusamus fugit accusantium in voluptatem consequuntur amet mollitia nemo doloremque nam reprehenderit quia, quae ipsam blanditiis inventore aliquid laudantium, minus neque sit? At animi eveniet numquam assumenda reiciendis sunt porro accusantium error quaerat.</div>
+    <!--storyheader-->
+    <div class="row">
+        <div class="col">
+            <h3 id="header1">The Forgotten Door <span class="badge text-bg-secondary">New</span></h3>
+        </div>
     </div><br>
+
+    <!--story-->
+    <div class="row" style="text-align: left;">
+      <div class="col">
+        <p>Lena had always wanted a place of her own. When she found the house—an old Victorian on the outskirts of town—she
+          was thrilled. It needed work, sure, but she didn’t mind. There was something charming about the creaky floors, the
+          high ceilings, and the musty scent of forgotten history. It felt like a place that had stories to tell.</p>
+        <p>Three months in, she was finally settling. The strange noises at night—the groaning wood, the faint scratching in
+          the walls—had become background noise. Old houses <em>breathed</em>, she told herself. But then, she found the
+          door. It was in the basement, set into the stone wall, its surface warped and splintered with age. The strange thing
+          was, she was <em>sure</em> it hadn’t been there before. The basement wasn’t large—just a small room with concrete
+          floors and a single exposed bulb. She had been down there dozens of times, organizing storage, checking on the old
+          boiler. How had she missed a door?</p>
+        <p>More unsettling was its construction. There was no handle, no knob, no keyhole—just a thick wooden slab bolted
+          into the foundation like someone had tried to <em>seal it away</em>. A cold unease settled in her stomach. Lena shook it off. Maybe she had just overlooked it in the dim light. Maybe she was being dramatic. But later
+          that night, as she lay in bed, she heard it. A slow, rhythmic <strong>knocking</strong>. She sat up, heart hammering. The noise came from below. Her rational mind tried to explain it away—pipes, the house settling, a draft shifting something against the
+          wall. But the knocking wasn’t random. It was steady. Deliberate.</p>
+        <p><strong>Knock. Knock. Knock.</strong> 
+          <p>She forced herself to stay in bed. Sleep eventually took her, but it was restless, filled with strange dreams of
+          dark hallways and unseen figures watching her from corners just out of sight. The next night, it happened again.</p>
+        <p><strong>Knock. Knock. Knock.</strong></p>
+        <p>Lena clutched the blankets, staring at the ceiling. Something was wrong with this house. She had felt it in small
+          ways since moving in—the sensation of being watched, the occasional flickering of lights. But this was different.
+          This was <em>direct</em>. By the third night, she couldn’t take it anymore. Armed with a flashlight and a crowbar, she made her way down to
+          the basement. The air felt thick, heavy with something unseen. The bulb overhead flickered as she approached the
+          door.</p>
+        <p>The knocking <strong>stopped</strong> the moment she touched it. Her breath came quick and shallow. Every instinct screamed at her to turn back, to leave it alone. But something
+          stronger—something <em>hungry</em>—urged her forward. She wedged the crowbar into the seam and pried. The wood groaned, the bolts straining against years of rust and decay. With a final, shuddering crack, the door swung inward—revealing nothing but darkness. Not empty darkness, though. This was different. This was <em>wrong</em>. It was too deep, too endless, like
+          staring into a place that should not exist.</p>
+        <p>And then—<strong>a whisper</strong>.</p>
+        <p><strong>“You shouldn’t have.”</strong></p>
+        <p>A chill ran down her spine. The words didn’t come from the dark. They came from <em>behind her</em>. Lena spun, flashlight beam shaking. The basement was empty. But the air had changed—charged, like the moment
+          before a storm. Then, she heard the first footstep. Not from behind her. From inside the darkness. It was soft at first, like a bare foot against stone. Then another. And another. 
+          <p>Something was stepping forward. The beam of her flashlight flickered, catching glimpses of movement—something <em>tall</em>, something
+          <em>wrong</em>. It was human-shaped, but only barely. Its limbs were too long, its body shifting like it was struggling to hold a shape at all. And its face—there was no face. Just a hollow, yawning void where one should have been. Lena stumbled back, heart slamming against her ribs. The thing took another step, its head tilting, as if <strong>listening</strong>.</p>
+        <p>Then, in a voice that wasn’t a voice at all, it <strong>spoke</strong>.</p>
+        <p><strong>“Trade.”</strong></p>
+        <p>The word echoed in her skull, vibrating through her bones. The thing took another step.</p>
+        <p><strong>“Trade.”</strong></p>
+        <p>Lena didn’t understand. Trade what? Her thoughts were unraveling, her mind struggling to hold onto reality as the
+          darkness <em>moved</em> around her, stretching toward her like living tendrils. And then—it touched her. A sensation like ice and fire seared through her veins, and she screamed. Her body convulsed, the world twisting,
+          warping, as if the fabric of reality itself was being rewritten. The last thing Lena saw before the darkness swallowed her was the basement door.</p>
+        <p>Closing.</p>
+        <hr>
+        <p>The next morning, the house was silent. Sunlight streamed through the windows. Dust motes floated lazily in the
+          air. The basement door was gone. No sign of it ever having been there. No disturbed concrete, no broken wood. Just smooth, unbroken stone. And the house remained empty.</p>
+        <p>For a time.</p>
+        <p>Until, in another town, in another basement, someone else found a door that shouldn’t be there.</p>
+        <p>And the knocking began again.</p>
+        <br>
+        <p>Story Written by: Alistair Voss</p>
+      </div>
+    </div>
 
     <!--List of stories-->
     <ol class="list-group list-group-numbered" data-bs-theme="dark">
@@ -122,18 +153,13 @@
         </div></a>
         <span class="badge text-bg-primary rounded-pill">14</span>
       </li>
-    </ol><br><br>
+    </ol><br>
 
     <!--cards-->
-    <div class="row">
-      <div class="col">
-        <h3>Top writers of the Month</h3>
-      </div>
-    </div><hr>
     <div class="row" data-bs-theme="dark">
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/DorateSataLogo1.1.jpg" class="card-img-top" alt="...">
+          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -144,7 +170,7 @@
       </div>
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/DorateSataLogo1.1.jpg" class="card-img-top" alt="...">
+          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -155,7 +181,7 @@
       </div>
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/DorateSataLogo1.1.jpg" class="card-img-top" alt="...">
+          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -166,7 +192,7 @@
       </div>
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/DorateSataLogo1.1.jpg" class="card-img-top" alt="...">
+          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -180,6 +206,7 @@
     <!--accordian-->
     <div class="row" data-bs-theme="dark">
       <div class="col ">
+        
         <div class="accordion bg-dark" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
