--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div><hr>
 
     <!--registration-->
     <section class="vh-100" style="background-color: black;">
