--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Home</title>
   <link rel="stylesheet" href="style/styles.css">
   <link rel="stylesheet" href="bootstrap-5.3.3/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -78,15 +78,19 @@
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button"
-          role="tab" aria-controls="profile-tab-pane" aria-selected="false">asdf</button>
+          role="tab" aria-controls="profile-tab-pane" aria-selected="false">Writers</button>
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button"
-          role="tab" aria-controls="contact-tab-pane" aria-selected="false">Contact</button>
+          role="tab" aria-controls="contact-tab-pane" aria-selected="false">Readers</button>
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="game-tab" data-bs-toggle="tab" data-bs-target="#game-tab-pane" type="button"
-          role="tab" aria-controls="game-tab-pane" aria-selected="false"></button>
+          role="tab" aria-controls="game-tab-pane" aria-selected="false">Submit a Story</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="game-tab" data-bs-toggle="tab" data-bs-target="#game-tab-pane" type="button"
+          role="tab" aria-controls="game-tab-pane" aria-selected="false">Contact</button>
       </li>
     </ul>
     <br>
@@ -133,7 +137,7 @@
     <div class="row" data-bs-theme="dark">
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/DorateSataLogo1.1.jpg" class="card-img-top" alt="...">
+          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -144,7 +148,7 @@
       </div>
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/DorateSataLogo1.1.jpg" class="card-img-top" alt="...">
+          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -155,7 +159,7 @@
       </div>
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/DorateSataLogo1.1.jpg" class="card-img-top" alt="...">
+          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -166,7 +170,7 @@
       </div>
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/DorateSataLogo1.1.jpg" class="card-img-top" alt="...">
+          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -262,7 +266,7 @@
           </div>
         </div>
       </div>
-    </div><br>
+    </div>
 
     <!--footer-->
     <footer class="text-center text-lg-start text-muted" data-bs-theme="dark">
