--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <body style="background-color: black; color: white; text-align: center;">
 
     <div class="container mt-5">
+          <!--header-->
+    <div class="row">
+      <div class="col">
+        <h1 id="header1">Writer'sTitle <span class="badge text-bg-secondary">New</span></h1>
+        <h5>A place for writers and readers to come together.</h5>
+      </div>
+    </div><hr>
+
+    <!--login-->
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <h2 class="mb-4">Login</h2>
@@ -24,7 +33,7 @@
                 </form>
             </div>
         </div>
-    </div><hr>
+      <hr>
 
     <!--registration-->
     <section class="vh-100" style="background-color: black;">
@@ -99,6 +108,7 @@
           </div>
         </div>
       </section>
+    </div>
 
     <!--script-->
     <script>
