--- a/theForgottenDoor.html
+++ b/theForgottenDoor.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>The Forgotten Door</title>
   <link rel="stylesheet" href="style/styles.css">
   <link rel="stylesheet" href="bootstrap-5.3.3/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -85,50 +85,79 @@
           high ceilings, and the musty scent of forgotten history. It felt like a place that had stories to tell.</p>
         <p>Three months in, she was finally settling. The strange noises at night—the groaning wood, the faint scratching in
           the walls—had become background noise. Old houses <em>breathed</em>, she told herself. But then, she found the
-          door. It was in the basement, set into the stone wall, its surface warped and splintered with age. The strange thing
+          door. It was in the basement, set into the stone wall, its surface warped and splintered with age. The strange
+          thing
           was, she was <em>sure</em> it hadn’t been there before. The basement wasn’t large—just a small room with concrete
           floors and a single exposed bulb. She had been down there dozens of times, organizing storage, checking on the old
           boiler. How had she missed a door?</p>
         <p>More unsettling was its construction. There was no handle, no knob, no keyhole—just a thick wooden slab bolted
-          into the foundation like someone had tried to <em>seal it away</em>. A cold unease settled in her stomach. Lena shook it off. Maybe she had just overlooked it in the dim light. Maybe she was being dramatic. But later
-          that night, as she lay in bed, she heard it. A slow, rhythmic <strong>knocking</strong>. She sat up, heart hammering. The noise came from below. Her rational mind tried to explain it away—pipes, the house settling, a draft shifting something against the
+          into the foundation like someone had tried to <em>seal it away</em>. A cold unease settled in her stomach. Lena
+          shook it off. Maybe she had just overlooked it in the dim light. Maybe she was being dramatic. But later
+          that night, as she lay in bed, she heard it. A slow, rhythmic <strong>knocking</strong>. She sat up, heart
+          hammering. The noise came from below. Her rational mind tried to explain it away—pipes, the house settling, a
+          draft shifting something against the
           wall. But the knocking wasn’t random. It was steady. Deliberate.</p>
-        <p><strong>Knock. Knock. Knock.</strong> 
-          <p>She forced herself to stay in bed. Sleep eventually took her, but it was restless, filled with strange dreams of
-          dark hallways and unseen figures watching her from corners just out of sight. The next night, it happened again.</p>
+        <p><strong>Knock. Knock. Knock.</strong>
+        <p>She forced herself to stay in bed. Sleep eventually took her, but it was restless, filled with strange dreams of
+          dark hallways and unseen figures watching her from corners just out of sight. The next night, it happened again.
+        </p>
         <p><strong>Knock. Knock. Knock.</strong></p>
         <p>Lena clutched the blankets, staring at the ceiling. Something was wrong with this house. She had felt it in small
           ways since moving in—the sensation of being watched, the occasional flickering of lights. But this was different.
-          This was <em>direct</em>. By the third night, she couldn’t take it anymore. Armed with a flashlight and a crowbar, she made her way down to
+          This was <em>direct</em>. By the third night, she couldn’t take it anymore. Armed with a flashlight and a crowbar,
+          she made her way down to
           the basement. The air felt thick, heavy with something unseen. The bulb overhead flickered as she approached the
           door.</p>
-        <p>The knocking <strong>stopped</strong> the moment she touched it. Her breath came quick and shallow. Every instinct screamed at her to turn back, to leave it alone. But something
-          stronger—something <em>hungry</em>—urged her forward. She wedged the crowbar into the seam and pried. The wood groaned, the bolts straining against years of rust and decay. With a final, shuddering crack, the door swung inward—revealing nothing but darkness. Not empty darkness, though. This was different. This was <em>wrong</em>. It was too deep, too endless, like
+        <p>The knocking <strong>stopped</strong> the moment she touched it. Her breath came quick and shallow. Every
+          instinct screamed at her to turn back, to leave it alone. But something
+          stronger—something <em>hungry</em>—urged her forward. She wedged the crowbar into the seam and pried. The wood
+          groaned, the bolts straining against years of rust and decay. With a final, shuddering crack, the door swung
+          inward—revealing nothing but darkness. Not empty darkness, though. This was different. This was <em>wrong</em>. It
+          was too deep, too endless, like
           staring into a place that should not exist.</p>
         <p>And then—<strong>a whisper</strong>.</p>
         <p><strong>“You shouldn’t have.”</strong></p>
-        <p>A chill ran down her spine. The words didn’t come from the dark. They came from <em>behind her</em>. Lena spun, flashlight beam shaking. The basement was empty. But the air had changed—charged, like the moment
-          before a storm. Then, she heard the first footstep. Not from behind her. From inside the darkness. It was soft at first, like a bare foot against stone. Then another. And another. 
-          <p>Something was stepping forward. The beam of her flashlight flickered, catching glimpses of movement—something <em>tall</em>, something
-          <em>wrong</em>. It was human-shaped, but only barely. Its limbs were too long, its body shifting like it was struggling to hold a shape at all. And its face—there was no face. Just a hollow, yawning void where one should have been. Lena stumbled back, heart slamming against her ribs. The thing took another step, its head tilting, as if <strong>listening</strong>.</p>
+        <p>A chill ran down her spine. The words didn’t come from the dark. They came from <em>behind her</em>. Lena spun,
+          flashlight beam shaking. The basement was empty. But the air had changed—charged, like the moment
+          before a storm. Then, she heard the first footstep. Not from behind her. From inside the darkness. It was soft at
+          first, like a bare foot against stone. Then another. And another.
+        <p>Something was stepping forward. The beam of her flashlight flickered, catching glimpses of movement—something
+          <em>tall</em>, something
+          <em>wrong</em>. It was human-shaped, but only barely. Its limbs were too long, its body shifting like it was
+          struggling to hold a shape at all. And its face—there was no face. Just a hollow, yawning void where one should
+          have been. Lena stumbled back, heart slamming against her ribs. The thing took another step, its head tilting, as
+          if <strong>listening</strong>.
+        </p>
         <p>Then, in a voice that wasn’t a voice at all, it <strong>spoke</strong>.</p>
         <p><strong>“Trade.”</strong></p>
         <p>The word echoed in her skull, vibrating through her bones. The thing took another step.</p>
         <p><strong>“Trade.”</strong></p>
         <p>Lena didn’t understand. Trade what? Her thoughts were unraveling, her mind struggling to hold onto reality as the
-          darkness <em>moved</em> around her, stretching toward her like living tendrils. And then—it touched her. A sensation like ice and fire seared through her veins, and she screamed. Her body convulsed, the world twisting,
-          warping, as if the fabric of reality itself was being rewritten. The last thing Lena saw before the darkness swallowed her was the basement door.</p>
-        <p>Closing.</p>
-        <hr>
+          darkness <em>moved</em> around her, stretching toward her like living tendrils. And then—it touched her. A
+          sensation like ice and fire seared through her veins, and she screamed. Her body convulsed, the world twisting,
+          warping, as if the fabric of reality itself was being rewritten. The last thing Lena saw before the darkness
+          swallowed her was the basement door. Closing...</p>
         <p>The next morning, the house was silent. Sunlight streamed through the windows. Dust motes floated lazily in the
-          air. The basement door was gone. No sign of it ever having been there. No disturbed concrete, no broken wood. Just smooth, unbroken stone. And the house remained empty.</p>
+          air. The basement door was gone. No sign of it ever having been there. No disturbed concrete, no broken wood. Just
+          smooth, unbroken stone. And the house remained empty.</p>
         <p>For a time.</p>
         <p>Until, in another town, in another basement, someone else found a door that shouldn’t be there.</p>
         <p>And the knocking began again.</p>
-        <br>
-        <p>Story Written by: Alistair Voss</p>
+
+        <!--author-->
+        <div class="card" style="width: 18rem;" data-bs-theme="dark">
+          <div class="card-body">
+            <h5 class="card-title">Story Written by: <br> Alistair Voss</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">The Forgotten Door</h6>
+            <p class="card-text"></p>
+            <a href="#" class="card-link">Card link</a>
+          </div>
+        </div>
       </div>
-    </div>
+    </div><br>
+
+    <!--comments-->
+    <div class="powr-comments" id="a398bc36_1738274620"></div><script src="https://www.powr.io/powr.js?platform=bootstrap"></script>
 
     <!--List of stories-->
     <ol class="list-group list-group-numbered" data-bs-theme="dark">
@@ -156,6 +185,11 @@
     </ol><br>
 
     <!--cards-->
+    <div class="row">
+      <div class="col">
+        <h3>Top writers of the Month</h3>
+      </div>
+    </div><hr>
     <div class="row" data-bs-theme="dark">
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
@@ -289,7 +323,7 @@
           </div>
         </div>
       </div>
-    </div><br>
+    </div>
 
     <!--footer-->
     <footer class="text-center text-lg-start text-muted" data-bs-theme="dark">
