--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home</title>
-  <link rel="stylesheet" href="style/styles.css">
+  <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="bootstrap-5.3.3/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -266,39 +266,24 @@
           </div>
         </div>
       </div>
-    </div>
+    </div><br>
 
     <!--footer-->
     <footer class="text-center text-lg-start text-muted" data-bs-theme="dark">
-      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+      <section class="d-flex justify-content-center">
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
         </div>
         <div>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-google"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-github"></i>
-          </a>
+          <a href=""><img style="height: 50px;" src="photos/socialIcons/14417709.png" alt=""></a>
+          <a href=""><img style="height: 50px;" src="photos/socialIcons/408707.png" alt=""></a>
+          <a href=""><img style="height: 50px;" src="photos/socialIcons/725289.png" alt=""></a>
         </div>
       </section>
 
       <!--lower footer-->
       <section class="">
-        <div class="container text-center text-md-start mt-5">
+        <div class="container text-center">
           <div class="row mt-3">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <h6 class="text-uppercase fw-bold mb-4">Company name</h6>
@@ -352,7 +337,7 @@
         </div>
       </section>
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2021 Copyright:
+        © 2024 Copyright: <img style="height: 40px;" src="photos/DorateSataLogo1.1-modified.png" alt="">
         <a class="text-reset fw-bold" href="">DorateSata LLC</a>
       </div>
     </footer>
@@ -362,7 +347,6 @@
 
   <!--script-->
   <script>
-
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
