--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-lg border-body" data-bs-theme="dark">
       <div class="container-fluid">
-        <img src="" id="logo" alt="">
-        <a class="navbar-brand" href="home.html">Navbar</a>
+        <img style="height: 50px;" src="photos/Screenshot 2025-01-29 201220-modified.png" id="logo" alt="">
+        <a class="navbar-brand" href="home.html">Writer's Title</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -88,22 +88,29 @@
         <button class="nav-link" id="game-tab" data-bs-toggle="tab" data-bs-target="#game-tab-pane" type="button"
           role="tab" aria-controls="game-tab-pane" aria-selected="false">Submit a Story</button>
       </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="game-tab" data-bs-toggle="tab" data-bs-target="#game-tab-pane" type="button"
-          role="tab" aria-controls="game-tab-pane" aria-selected="false">Contact</button>
-      </li>
     </ul>
     <br>
     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur quo, optio ex deleniti consequatur cupiditate nemo natus, harum pariatur corrupti ipsam obcaecati sequi numquam nam molestias, quidem beatae fugiat dolorum. Iure, magnam. Consectetur iste eveniet iure veritatis ex, aperiam accusantium optio laborum voluptates maiores, necessitatibus eligendi odio laudantium facilis assumenda cumque magnam eum repudiandae quidem aut, autem vitae dignissimos non. Dicta temporibus iste eos possimus. Atque enim quo eius quas repellat reiciendis unde totam voluptatibus repudiandae illum vel aliquid culpa fugit assumenda rerum rem, harum facilis corporis? Fugiat quae harum quo consequatur vel unde eveniet aut debitis maxime non. Dolorum!</div>
-      <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quis aperiam molestiae! Maxime, odio mollitia harum provident illum at. Animi vero blanditiis doloremque perferendis et fuga quam quae, veritatis, earum distinctio atque neque dolorem ipsam iste inventore praesentium quod! Aperiam, quasi? Molestias in iusto voluptas! Animi numquam quasi ipsam. Provident consequatur illum facere aperiam placeat. Accusamus alias velit explicabo sed amet quo nostrum magni inventore architecto exercitationem doloribus odit, et neque voluptatum esse vero reiciendis autem unde. Magnam cum molestiae tenetur sunt accusamus esse dolor commodi deleniti magni, numquam officiis. Eaque necessitatibus repudiandae facilis magnam laboriosam nisi, doloremque ipsam libero?
+        "Writer's Title is a passionate platform dedicated to celebrating the craft of short storytelling. Our mission is to provide writers with a space to share their original stories, gain much-needed exposure, and connect with a diverse community of readers and fellow writers. We believe that every voice deserves to be heard, and that the power of storytelling can bring people together, spark new ideas, and foster deeper connections. Through collaboration, feedback, and shared creativity, we aim to inspire writers to push their boundaries, hone their skills, and continue telling the stories that matter most to them. At Writer's Title, we're building a supportive, dynamic space where both seasoned and emerging storytellers can grow, thrive, and find their audience."</div>
+      <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+        "At Writer's Title, we understand the passion and dedication that go into crafting a short story. We’re here to give you the platform you need to share your work with the world. Whether you’re a seasoned writer or just starting out, we believe every story deserves to be seen, heard, and celebrated. By publishing your stories on our site, you’ll gain exposure, connect with like-minded creators, and receive valuable feedback to help you grow as a writer. Our community thrives on support, inspiration, and collaboration—here, you’ll find a place where your voice can shine. Join us in building a space where creativity knows no bounds and every writer has the opportunity to leave their mark."
       </div>
-      <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa sequi, earum iure praesentium animi voluptate temporibus et accusantium explicabo voluptatibus quibusdam non error numquam, quaerat soluta vel perferendis sapiente ullam saepe quia! Minima iste illum tempora quis possimus ullam. Voluptas rem sapiente animi culpa? Veniam iusto assumenda expedita. At dolor, ad in officia fuga numquam ipsam asperiores soluta aperiam, quisquam, eveniet corrupti enim hic modi dolores nihil explicabo dolore! Magni odio eaque amet inventore officia consequuntur sint veniam voluptates iure ratione illum non laboriosam necessitatibus, culpa facere cupiditate dolore qui nemo ex molestiae perspiciatis voluptatum? Veniam amet neque ea cumque.</div>
-      <div class="tab-pane fade" id="game-tab-pane" role="tabpanel" aria-labelledby="game-tab" tabindex="0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti dolorem animi eos, distinctio ipsum expedita corporis odit rem ipsam ipsa alias aut! Quisquam fuga nihil nostrum praesentium, soluta eligendi, eaque cupiditate vel aliquid quas inventore ipsa cum quo. Voluptas harum quasi architecto alias itaque eligendi modi labore sed aspernatur rerum quod atque voluptatem unde deleniti pariatur vitae nobis, nostrum quia. Voluptates rem enim sapiente adipisci commodi cumque, accusamus fugit accusantium in voluptatem consequuntur amet mollitia nemo doloremque nam reprehenderit quia, quae ipsam blanditiis inventore aliquid laudantium, minus neque sit? At animi eveniet numquam assumenda reiciendis sunt porro accusantium error quaerat.</div>
+      <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+        "As a reader, you’re not just consuming stories—you’re part of the journey. At Writer’s Title, we invite you to explore fresh, original short stories from emerging and established writers alike. Every story you read helps support the creativity and growth of the storytellers behind them. Your engagement, feedback, and appreciation foster a vibrant community where writers are encouraged to continue creating and evolving. Whether you're looking for a quick escape, a new perspective, or a deeply moving narrative, you'll find it here. Join us in celebrating the art of storytelling and discover the voices that are shaping the future of storytelling."
+      </div>
+      <div class="tab-pane fade" id="game-tab-pane" role="tabpanel" aria-labelledby="game-tab" tabindex="0">
+        "Ready to share your story with the world? Submitting your short story to Writer’s Title is easy! Simply send your work to the email provided below, and we’ll review it for publication on our platform. We welcome stories of all genres, lengths, and styles—if it’s your unique creation, we want to read it. When submitting, be sure to include your name, story title, and a brief author bio. Our team will carefully consider your submission and get back to you as soon as possible. Join us in growing this community of writers and readers by sharing your voice. We can’t wait to see what you’ve written!"
+        <p>Writer'sTitle.info@gmail.com</p>
+      </div>
     </div><br>
 
     <!--List of stories-->
+    <div class="row">
+      <div class="col">
+        <h2 id="header1">New Stories! <span class="badge text-bg-secondary">New</span></h2>
+      </div>
+    </div>
     <ol class="list-group list-group-numbered" data-bs-theme="dark">
       <li class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
