--- a/theForgottenDoor.html
+++ b/theForgottenDoor.html
@@ -18,8 +18,8 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-lg border-body" data-bs-theme="dark">
       <div class="container-fluid">
-        <img src="" id="logo" alt="">
-        <a class="navbar-brand" href="home.html">Navbar</a>
+        <img style="height: 50px;" src="photos/Screenshot 2025-01-29 201220-modified.png" id="logo" alt="">
+        <a class="navbar-brand" href="home.html">Writer's Title</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -145,7 +145,7 @@
         <p>And the knocking began again.</p>
 
         <!--author-->
-        <div class="card" style="width: 18rem;" data-bs-theme="dark">
+        <div style="text-align: center;" class="card" style="width: 18rem;" data-bs-theme="dark">
           <div class="card-body">
             <h5 class="card-title">Story Written by: <br> Alistair Voss</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">The Forgotten Door</h6>
@@ -158,7 +158,6 @@
 
     <!--comments-->
     <div class="powr-comments" id="a398bc36_1738274620"></div><script src="https://www.powr.io/powr.js?platform=bootstrap"></script>
-    
 
     <!--List of stories-->
     <ol class="list-group list-group-numbered" data-bs-theme="dark">
