--- a/home.html
+++ b/home.html
@@ -1,24 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home</title>
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/style.scss">
   <link rel="stylesheet" href="bootstrap-5.3.3/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body style="background-color: black; color: white; text-align: center;">
+<body  style=" text-align: center;">
   <!--container-->
   <div class="container">
 
+    <button class="btn btn-dark shadow d-flex justify-content-end" id="btnSwitch">Toggle Dark/Light</button><br>
+
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg border-body" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg border-body" >
       <div class="container-fluid">
-        <img style="height: 50px;" src="photos/Screenshot 2025-01-29 201220-modified.png" id="logo" alt="">
+        <img style="height: 50px;" src="photos/Screenshot 2025-01-29 201220-modified.png" id="logo" alt=""><br>
         <a class="navbar-brand" href="home.html">Writer's Title</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,12 +68,12 @@
     <!--logoimg-->
     <div class="row">
       <div class="col">
-        <img src="photos/Screenshot 2025-01-29 201220.jpg" class="img-fluid" alt="">
+        <img style="border-radius: 45%;" src="photos/Screenshot 2025-01-29 201220.jpg" class="img-fluid" alt="">
       </div>
     </div><hr>
 
     <!--tabs under nav-->
-    <ul class="nav nav-tabs" data-bs-theme="dark" id="myTab" role="tablist">
+    <ul class="nav nav-tabs"  id="myTab" role="tablist">
       <li class="nav-item" role="presentation">
         <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button"
           role="tab" aria-controls="home-tab-pane" aria-selected="true">Mission</button>
@@ -111,7 +113,7 @@
         <h2 id="header1">New Stories! <span class="badge text-bg-secondary">New</span></h2>
       </div>
     </div>
-    <ol class="list-group list-group-numbered" data-bs-theme="dark">
+    <ol class="list-group list-group-numbered" >
       <li class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
           <a href="theForgottenDoor.html"><div class="fw-bold">The Forgotten Door</div>
@@ -135,16 +137,26 @@
       </li>
     </ol><br><br>
 
-    <!--cards-->
+    <!--cards author of the month-->
     <div class="row">
       <div class="col">
         <h3>Top writers of the Month</h3>
       </div>
     </div><hr>
-    <div class="row" data-bs-theme="dark">
+    <div class="row" >
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
+          <img src="photos/authorPics/AlistairVoss.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">AliStair Voss</h5>
+            <p class="card-text">Story: The Forgotten Door</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex justify-content-center">
+        <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
+          <img src="photos/authorPics/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -155,7 +167,7 @@
       </div>
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
+          <img src="photos/authorPics/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -166,18 +178,7 @@
       </div>
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-      <div class="col d-flex justify-content-center">
-        <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
+          <img src="photos/authorPics/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -189,7 +190,7 @@
     </div><br>
 
     <!--accordian-->
-    <div class="row" data-bs-theme="dark">
+    <div class="row" >
       <div class="col ">
         <div class="accordion bg-dark" id="accordionExample">
           <div class="accordion-item">
@@ -276,7 +277,7 @@
     </div><br>
 
     <!--footer-->
-    <footer class="text-center text-lg-start text-muted" data-bs-theme="dark">
+    <footer class="text-center text-lg-start text-muted" >
       <section class="d-flex justify-content-center">
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
@@ -354,6 +355,14 @@
 
   <!--script-->
   <script>
+    document.getElementById('btnSwitch').addEventListener('click',()=>{
+    if (document.documentElement.getAttribute('data-bs-theme') == 'dark') {
+        document.documentElement.setAttribute('data-bs-theme','light')
+    }
+    else {
+        document.documentElement.setAttribute('data-bs-theme','dark')
+    }
+})
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
