--- a/theForgottenDoor.html
+++ b/theForgottenDoor.html
@@ -1,22 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Forgotten Door</title>
-  <link rel="stylesheet" href="style/styles.css">
+  <link rel="stylesheet" href="style/style.scss">
   <link rel="stylesheet" href="bootstrap-5.3.3/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body style="background-color: black; color: white; text-align: center;">
+<body style="text-align: center;">
   <!--container-->
   <div class="container">
 
+    <button class="btn btn-dark shadow d-flex justify-content-end" id="btnSwitch">Toggle Dark/Light</button><br>
+
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg border-body" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg border-body" >
       <div class="container-fluid">
         <img style="height: 50px;" src="photos/Screenshot 2025-01-29 201220-modified.png" id="logo" alt="">
         <a class="navbar-brand" href="home.html">Writer's Title</a>
@@ -66,7 +68,7 @@
     <!--logoimg-->
     <div class="row">
       <div class="col">
-        <img src="photos/Screenshot 2025-01-29 201220.jpg" class="img-fluid" alt="">
+        <img style="border-radius: 45%;" src="photos/Screenshot 2025-01-29 201220.jpg" class="img-fluid" alt="">
       </div>
     </div><hr><br><br>
 
@@ -145,7 +147,7 @@
         <p>And the knocking began again.</p>
 
         <!--author-->
-        <div style="text-align: center;" class="card" style="width: 18rem;" data-bs-theme="dark">
+        <div style="text-align: center;" class="card" style="width: 18rem;" >
           <div class="card-body">
             <h5 class="card-title">Story Written by: <br> Alistair Voss</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">The Forgotten Door</h6>
@@ -158,9 +160,9 @@
 
     <!--comments-->
     <div class="powr-comments" id="a398bc36_1738274620"></div><script src="https://www.powr.io/powr.js?platform=bootstrap"></script>
-
+    
     <!--List of stories-->
-    <ol class="list-group list-group-numbered" data-bs-theme="dark">
+    <ol class="list-group list-group-numbered" >
       <li class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
           <a href="theForgottenDoor.html"><div class="fw-bold">The Forgotten Door</div>
@@ -184,16 +186,26 @@
       </li>
     </ol><br>
 
-    <!--cards-->
+    <!--cards author of the month-->
     <div class="row">
       <div class="col">
         <h3>Top writers of the Month</h3>
       </div>
     </div><hr>
-    <div class="row" data-bs-theme="dark">
+    <div class="row" >
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
+          <img src="photos/authorPics/AlistairVoss.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">AliStair Voss</h5>
+            <p class="card-text">Story: The Forgotten Door</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex justify-content-center">
+        <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
+          <img src="photos/authorPics/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -204,7 +216,7 @@
       </div>
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
+          <img src="photos/authorPics/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -215,18 +227,7 @@
       </div>
       <div class="col d-flex justify-content-center">
         <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-      <div class="col d-flex justify-content-center">
-        <div class="card card text-bg-secondary mb-3" style="width: 18rem;">
-          <img src="photos/portraitPlacegolder.jpg" class="card-img-top" alt="...">
+          <img src="photos/authorPics/portraitPlacegolder.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -238,7 +239,7 @@
     </div><br>
 
     <!--accordian-->
-    <div class="row" data-bs-theme="dark">
+    <div class="row" >
       <div class="col ">
         
         <div class="accordion bg-dark" id="accordionExample">
@@ -326,36 +327,21 @@
     </div>
 
     <!--footer-->
-    <footer class="text-center text-lg-start text-muted" data-bs-theme="dark">
-      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <footer class="text-center text-lg-start text-muted" >
+      <section class="d-flex justify-content-center">
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
         </div>
         <div>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-google"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-github"></i>
-          </a>
+          <a href=""><img style="height: 50px;" src="photos/socialIcons/14417709.png" alt=""></a>
+          <a href=""><img style="height: 50px;" src="photos/socialIcons/408707.png" alt=""></a>
+          <a href=""><img style="height: 50px;" src="photos/socialIcons/725289.png" alt=""></a>
         </div>
       </section>
 
       <!--lower footer-->
       <section class="">
-        <div class="container text-center text-md-start mt-5">
+        <div class="container text-center">
           <div class="row mt-3">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <h6 class="text-uppercase fw-bold mb-4">Company name</h6>
@@ -409,7 +395,7 @@
         </div>
       </section>
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2021 Copyright:
+        © 2024 Copyright: <img style="height: 40px;" src="photos/DorateSataLogo1.1-modified.png" alt="">
         <a class="text-reset fw-bold" href="">DorateSata LLC</a>
       </div>
     </footer>
@@ -419,7 +405,14 @@
 
   <!--script-->
   <script>
-
+    document.getElementById('btnSwitch').addEventListener('click',()=>{
+    if (document.documentElement.getAttribute('data-bs-theme') == 'dark') {
+        document.documentElement.setAttribute('data-bs-theme','light')
+    }
+    else {
+        document.documentElement.setAttribute('data-bs-theme','dark')
+    }
+})
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
