--- a/theForgottenDoor.html
+++ b/theForgottenDoor.html
@@ -78,7 +78,7 @@
     <!--storyheader-->
     <div class="row">
         <div class="col">
-            <h3 id="header1">The Forgotten Door <span class="badge text-bg-secondary">New</span></h3>
+            <h3 id="header2">The Forgotten Door <span class="badge text-bg-secondary">New</span></h3>
         </div>
     </div><br>
 
@@ -165,6 +165,11 @@
     <div class="powr-comments" id="a398bc36_1738274620"></div><script src="https://www.powr.io/powr.js?platform=bootstrap"></script>
     
     <!--List of stories-->
+    <div class="row">
+      <div class="col">
+        <h2 id="header1">New Stories! <span class="badge text-bg-secondary">New</span></h2>
+      </div>
+    </div>
     <ol class="list-group list-group-numbered" >
       <li class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
