--- a/theForgottenDoor.html
+++ b/theForgottenDoor.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Forgotten Door</title>
+  <title>Writer's Title - The Forgotten Door</title>
+  <link rel="icon" href="photos/Screenshot 2025-01-29 201220-modified.png">
+
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="script/script.js">
   <link rel="stylesheet" href="style/style.scss">
