--- a/public/zLogin.html
+++ b/public/zLogin.html
@@ -76,8 +76,8 @@
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                           <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                            <input type="password" id="password-signup" class="form-control" />
-                            <label class="form-label" for="password-signup">Repeat your password</label>
+                            <input type="password" id="password-repeat-signup" class="form-control" />
+                            <label class="form-label" for="password-repeat-signup">Repeat your password</label>
                           </div>
                         </div>
       
