changed the name of the zLogin html to signUp, also just fixed the link inside of home.html

--- a/public/home.html
+++ b/public/home.html
@@ -45,7 +45,7 @@
                 Dropdown
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="zLogin.html">Sign Up</a></li>
+                <li><a class="dropdown-item" href="signUp.html">Sign Up</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li>
                   <hr class="dropdown-divider">
