--- a/theForgottenDoor.html
+++ b/theForgottenDoor.html
@@ -40,7 +40,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Stories
+                Submissions
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#header1">Stories</a></li>
